--- a/Vidiya.csproj
+++ b/Vidiya.csproj
@@ -8,20 +8,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\Images\SidePanel_Logo.jpg" />
     <None Remove="Assets\Images\Vidiya_banner.png" />
     <None Remove="Assets\Images\Vidiya_Icon.png" />
     <None Remove="Assets\Images\Vidiya_splashscreen.png" />
     <None Remove="Vidiya_logo.png" />
-    <None Remove="Windows\Vidiya_Icon.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Material.Icons" Version="2.1.6" />
+    <PackageReference Include="Material.Icons.Avalonia" Version="2.1.0" />
+    <PackageReference Include="Material.Icons.WPF" Version="2.1.0" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
     <PackageReference Include="WpfScreenHelper" Version="2.1.0" />
     <PackageReference Include="YoutubeDLSharp" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\Images\SidePanel_Logo.jpg" />
     <Resource Include="Assets\Images\Vidiya_Banner.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -31,17 +35,12 @@
     <Resource Include="Assets\Images\Vidiya_Logo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Windows\Vidiya_Icon.png" />
   </ItemGroup>
 
   <ItemGroup>
     <SplashScreen Include="Assets\Images\Vidiya_Splashscreen.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </SplashScreen>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Util\" />
   </ItemGroup>
 
 </Project>
